# ipa-labeler

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  agreement.py  annotations.py  app.py  asr.py  auth.py  clips.py  db.py  models.py  pyproject.toml
.claude/: launch.json
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: aed508fb00eb_initial_schema_users_audio_clips_.py
scripts/: migrate_from_json.py
static/: app.js  ipa_symbols.json  style.css
templates/: index.html
tests/: conftest.py  test_app.py
