[project]
name = "ipa-labeler"
version = "0.1.0"
description = "Web application for labeling audio files with IPA phonetic symbols"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "mutagen>=1.47.0",
    "faster-whisper>=1.0.3",
    "gruut>=2.4.0",
    "gruut-lang-en>=2.0.0",
    "soundfile>=0.12.1",
    "numpy>=2.1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportPossiblyUnbound = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
